--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-color: #696969;">
+  <body style="background-color: rgb(104, 109, 89);">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
